src/Deployments/K8S/Nginx/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: weather.com
      http:
        paths:
          - path: /api/clientandserver
            pathType: Prefix
            backend:
              service:
                name: clientandserver-clusterip-service
                port:
                  number: 80
